movie api developed, tested, pagination refactored

--- a/MR.Api/appsettings.json
+++ b/MR.Api/appsettings.json
@@ -1,4 +1,8 @@
 {
+  "ApiSettings": {
+    "BaseUrl": "https://api.themoviedb.org/3/",
+    "ApiKey": "1290f743f22ed793b8e53d590736067e"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
