mongo context is created, controller is refactored, repository has been created

--- a/MR.Api/appsettings.json
+++ b/MR.Api/appsettings.json
@@ -1,7 +1,21 @@
 {
+  "DatabaseSettings": {
+    "ConnectionString": "mongodb://localhost:27017",
+    "DatabaseName": "MovieDb",
+    "CollectionName": "Movies"
+  },
   "ApiSettings": {
     "BaseUrl": "https://api.themoviedb.org/3/",
     "ApiKey": "1290f743f22ed793b8e53d590736067e"
+  },
+  "SmtpConfiguration": {
+    "Host": "smtp.gmail.com",
+    "Login": "smtp.gmail.com",
+    "From": "mob.oguz.nalbant@gmail.com",
+    "To": "oguz.nalbant@gmail.com",
+    "Token": "dshnbzafogakqwvc",
+    "Password": "ogjwmmrfzmanppeb",
+    "Port": 587
   },
   "Logging": {
     "LogLevel": {
