email, hangfire, comment, jobs

--- a/MR.Api/appsettings.json
+++ b/MR.Api/appsettings.json
@@ -10,11 +10,10 @@
   },
   "SmtpConfiguration": {
     "Host": "smtp.gmail.com",
-    "Login": "smtp.gmail.com",
+    "Login": "mob.oguz.nalbant@gmail.com",
     "From": "mob.oguz.nalbant@gmail.com",
     "To": "oguz.nalbant@gmail.com",
-    "Token": "dshnbzafogakqwvc",
-    "Password": "ogjwmmrfzmanppeb",
+    "Password": "scdxbbwhpucwulnu",
     "Port": 587
   },
   "Logging": {
