--- a/MR.Api/appsettings.json
+++ b/MR.Api/appsettings.json
@@ -13,7 +13,7 @@
     "Login": "mob.oguz.nalbant@gmail.com",
     "From": "mob.oguz.nalbant@gmail.com",
     "To": "oguz.nalbant@gmail.com",
-    "Password": "scdxbbwhpucwulnu",
+    "Password": "password",
     "Port": 587
   },
   "Logging": {
